force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/VCG_CPQ_Product_Dependency__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Product Dependency</label>
    <nameField>
        <label>Product Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Product Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>