force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Dependent_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Dependencies (Dependent Product)</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>