force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>