force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group A</fullName>
            </value>
            <value>
                <fullName>Group B</fullName>
            </value>
            <value>
                <fullName>Group C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>