force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Match_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Match_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Quantity</label>
    <type>Checkbox</type>
</CustomField>