force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Multiples__c.field-meta.xml
<CustomField>
    <fullName>Multiples__c</fullName>
    <label>Multiples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>