force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Dependencies</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>