force-app/main/default/objects/VCG_CPQ_Product_Dependency__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Supported operators: &gt;0, &gt;=0</inlineHelpText>
    <label>Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&gt;=0</fullName>
            </value>
            <value>
                <fullName>&gt;0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>